@@ -8,7 +8,7 @@ plugins {
 
 group = 'ru.leti'
 version = '1.0.0'
-sourceCompatibility = '17'
+sourceCompatibility = "19"
 
 configurations {
     compileOnly {
@@ -31,18 +31,22 @@ repositories {
         url = uri("https://maven.pkg.github.com/Terross/wise-task-library")
         credentials {
             username = 'Terross'
-            password = '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' //Eternal public token for library
+            password = 'ghp_Dn7eIsR5xy0EI    VZGGcjaKjQOrHrMfN3N0xb3' //Eternal public token for library
         }
     }
 }
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'ru.leti:wise-task-library:1.0.1'
+    implementation 'ru.leti:wise-task-library:1.0.2'
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.postgresql:postgresql:42.2.27'
-//    implementation "org.flywaydb:flyway-core:9.15.1"
+
+    implementation 'org.mapstruct:mapstruct:1.5.3.Final'
+
+    annotationProcessor 'org.projectlombok:lombok'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
 
 
     //OpenAPI dependencies
@@ -60,7 +64,6 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 }
@@ -108,4 +111,8 @@ compileJava.dependsOn tasks.openApiGenerate
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+compileJava {
+    options.compilerArgs += ['--enable-preview']
 }
